examples/test/testpolicy14202.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14202
  namespace: namespace402
spec:
  podSelector:
    matchLabels:
      key23: value45
      key9: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value15
          key36: value5
          key43: value39
      podSelector:
        matchLabels:
          key37: value31
          key36: value21
